# typebleed

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: make_polyglots.py  test_detector.py
tests/polyglots/: png_zip.zip.extracted
typebleed/: analyzer.py  cli.py  detector.py  extractor.py  report.py
typebleed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
typebleed/parsers/: __init__.py  base.py  gif.py  html.py  jpeg.py  pdf.py  php.py  png.py  svg.py  zip.py
